mundial-backend/gateway/old/vs-equipos.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vsequipos
  namespace: mundial
spec:
  http:
  - match:
     - uri:
        prefix: "/equipos"
    route:
    - destination:
        host: equiposservice.mundial.svc.cluster.local
