mundial-backend/gateway/old/vs-partidos.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vspartidos
  namespace: mundial
spec:
  http:
  - match:
     - uri:
        prefix: "/partidos"
    route:
    - destination:
        host: partidosservice.mundial.svc.cluster.local
